fix: fix width overflow in about section

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -304,7 +304,6 @@ span#author-name:hover {
   background-color: #313131;
 
   min-height: 100vh;
-  width: 100vw;
   padding: 7rem 3rem;
 }
 
